--- a/public/asset/Communication.css
+++ b/public/asset/Communication.css
@@ -26,7 +26,7 @@ ul, li {
 }
 
 .content__inner{
-    --background: rgba(85, 190, 182, 1);
+    --background: rgba(154, 179, 255, 1);
 }
 
 /*검색 관련*/
@@ -37,7 +37,7 @@ ul, li {
     border-radius: 40px;
     padding: 10px;
     margin: 10px auto;
-    border: 2px solid #55BEB6;
+    border: 2px solid #7e90e7
 }
 
 .search-txt{
@@ -50,6 +50,7 @@ ul, li {
 }
 
 .search-btn{
+    background-color: #fff;
     float: right;
     width: 30px;
     height: 20px;
@@ -76,8 +77,8 @@ input[name="tabmenu"] + label {
 }
 
 input[name="tabmenu"]:checked + label {
-    border: 3px solid #55BEB6;
-    color: #55BEB6;
+    border: 3px solid #7e90e7;
+    color: #7e90e7;
 }
 
 .conbox {
@@ -105,7 +106,7 @@ input[id*="answer"] + label {
     padding: 10px 20px;
     font-size: 22px;
     color: #fff;
-    background-color: #34A397;
+    background-color: #7e90e7;
     cursor: pointer;
     position: relative;
 }
@@ -126,7 +127,7 @@ input[id*="answer"] + label + div {
     max-height: 0;
     transition: all .35s;
     overflow: hidden;
-    background: #def7f8;
+    background: #fdf8ff;
     font-size: 18px;
 }
 
@@ -151,7 +152,7 @@ input[id*="answer"]:checked + label em {
     font-size: 22px;
     font-weight: bolder;
     text-align: center;
-    color: #1b645d;
+    color: #5365bc;
 }
 
 /*Q&A 게시판 관련*/
@@ -179,6 +180,7 @@ input[id*="answer"]:checked + label em {
     width: 100%;
     border-top: 3px solid #000;
     font-size: 1rem;
+    margin: 0 auto;
 }
 
 .list > div {
@@ -208,11 +210,12 @@ input[id*="answer"]:checked + label em {
 
 .list .num {width: 10%;}
 .list .title {
-    width: 45%;
+    width: 40%;
     text-align: left;
 }
 .list .writer {width: 20%;}
-.list .date {width: 25%;}
+.list .date {width: 20%;}
+.list .delete {width: 10%;}
 
 /*Q&A 게시판 번호*/
 .board_page {
@@ -255,7 +258,7 @@ input[id*="answer"]:checked + label em {
     font-size: 0;
 }
 
-.bt_wrap a {
+.bt_wrap button {
     display: inline-block;
     min-width: 70px;
     margin-left: 7px;
@@ -265,11 +268,11 @@ input[id*="answer"]:checked + label em {
     font-size: 1.2rem;
 }
 
-.bt_wrap a:first-child {
+.bt_wrap button:first-child {
     margin-left: 0;
 }
 
-.bt_wrap a.on {
+.bt_wrap button.on {
     background: #000;
     color: #fff;
 }
