--- a/public/asset/write.css
+++ b/public/asset/write.css
@@ -38,14 +38,14 @@ a {
     margin-top: 15px;
     font-size: 1.5rem;
 }
-/*여기부분 내가 수정함ㄸ*/
+
 .bt_wrap {
     margin-top: 30px;
     text-align: center;
     font-size: 0;
 }
 
-.bt_wrap button {
+.bt_wrap a {
     display: inline-block;
     min-width: 80px;
     margin-left: 10px;
@@ -55,18 +55,15 @@ a {
     font-size: 1.4rem;
 }
 
-.bt_wrap input {
+.bt_wrap a:first-child {
+    margin-left: 0;
+}
+
+.bt_wrap a.on {
     background: #000;
     color: #fff;
-    display: inline-block;
-    min-width: 80px;
-    margin-left: 0px;
-    padding: 10px;
-    border: 1px solid #000;
-    border-radius: 2px;
-    font-size: 1.4rem;
 }
-/*여기부분 내가 수정함ㄸ*/
+
 .board_write {
     border-top: 2px solid #000;
 }
